fix for claims function BETA